[package]
name = "threadgroup"
version = "0.1.0"
authors = ["Vincent de Phily <moltonel@gmail.com>"]
description = "Manage groups of threads as one unit, join the first one that finishes, timeout on join attempts."
readme = "README.md"
license = "MIT"
categories = ["concurrency"]
keywords = ["thread", "timeout"]
repository = "https://github.com/vincentdephily/threadgroup"
documentation = "https://docs.rs/threadgroup"

[dependencies]
